[tool.poetry]
name = "LAHAUT"
version = "0.1.0"
description = ""
authors = ["Fabien Le Frapper <contact@fabienlefrapper.me>"]

[tool.poetry.dependencies]
python = ">=3.6"
django = ">=2.2,<2.3"
wagtail = "<2.9"
django-storages = "^1.9.1"
boto3 = "^1.12.39"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
opencv-python = "^4.2.0"
wagtailfontawesome = "^1.2.1"
django-cors-headers = "^3.2.1"
wagtailmedia = "^0.5.0"
wagtail-grapple = "^0.5.1"
django-redis = "^4.11.0"
gunicorn = "^20.0.4"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
